Refactoring Java types (#75)
* All the Java types are in the same package

* Fixing allInstances method for Java types