@@ -3,21 +3,22 @@ package it.unive.jlisa.program.type;
 import it.unive.lisa.type.Type;
 import it.unive.lisa.type.TypeSystem;
 
+import java.util.Collections;
 import java.util.Set;
 
-public class IntType implements JavaNumericType {
-    public static final IntType INSTANCE = new IntType();
+public class JavaShortType implements JavaNumericType {
+    public static final JavaShortType INSTANCE = new JavaShortType();
 
-    protected IntType() {}
+    protected JavaShortType() {}
 
     @Override
     public String toString() {
-        return "int";
+        return "short";
     }
 
     @Override
     public Set<Type> allInstances(TypeSystem types) {
-        return Set.of();
+        return Collections.singleton(this);
     }
 
     @Override
@@ -27,12 +28,12 @@ public class IntType implements JavaNumericType {
 
     @Override
     public boolean is16Bits() {
-        return false;
+        return true;
     }
 
     @Override
     public boolean is32Bits() {
-        return true;
+        return false;
     }
 
     @Override
